# arch-stats

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.json  Cargo.toml  LICENSE  README.md  cspell.json  thoughts.md
Pi/: arch-stats.service
backend/: .env  Cargo.toml  README.md  app.py  main.py  pyproject.toml  tasks.py
backend/.agent/rules/: new-backend-code.md  new_code.md  python_formatting.md  python_linting.md  python_package_management.md  python_tests.md  python_type_annotation.md  python_virtual_environment.md
backend/.agent/skills/backend-formatting/: SKILL.md
backend/.agent/skills/backend-linting/: SKILL.md
backend/.agent/skills/backend-package-management/: SKILL.md
backend/.agent/skills/backend-run-server/: SKILL.md
backend/.agent/skills/backend-scripts/: SKILL.md
backend/.agent/skills/backend-tests/: SKILL.md
backend/.agent/skills/backend-type-annotation/: SKILL.md
backend/.agent/skills/backend-virtual-environment/: SKILL.md
backend/.agent/skills/formatting/: SKILL.md
backend/.agent/skills/linting/: SKILL.md
backend/.agent/skills/package_management/: SKILL.md
backend/.agent/skills/run_server/: SKILL.md
backend/.agent/skills/scripts/: SKILL.md
backend/.agent/skills/tests/: SKILL.md
backend/.agent/skills/type_annotation/: SKILL.md
backend/arrow_reader/: Cargo.toml  main.py  pyproject.toml
backend/bow_reader/: Cargo.toml  main.py  pyproject.toml
backend/create_uuid/: Cargo.toml
backend/database/: __init__.py  arrow_model.py  arrows.py  arrows_db.py  arrows_model.py  base.py  base_model.py  db_state.py  sessions.py  sessions_db.py  sessions_model.py  shots.py  shots_db.py  shots_model.py  targets.py  targets_db.py  targets_model.py
backend/database/schema/: __init__.py  arrows_schema.py  base.py  sessions_schema.py  shots_schema.py  targets_schema.py
backend/docs/: diagrams_generator.py  pyproject.toml
backend/hub/: Cargo.toml  __init__.py  __main__.py  hub.py
backend/hub/src/: main.rs
backend/install/src/: main.rs
backend/main_socket/: Cargo.toml
backend/main_socket/src/: main.rs
backend/migrations/: V002__2025-09-26_archers_table.sql  V003__2025-09-26_authentication_session_table.sql  V004__2025-09-26_shooting_sessions_table.sql  V005__2025-10-02_shots_table.sql
backend/server/: Cargo.toml  __init__.py  __main__.py  app.py  db_pool.py  dependencies.py  main.py  pyproject.toml  server.py  settings.py  setup.py
backend/server/frontend/: index.html
backend/server/models/: __init__.py  arrows_db.py  base_db.py  db_state.py  sessions_db.py  shots_db.py  targets_db.py
backend/server/routers/: __init__.py  archer.py  arrow.py  arrow_uuid_router.py  arrows.py  arrows_router.py  lane.py  sessions.py  sessions_router.py  shooting.py  shots.py  shots_router.py  target.py  targets.py  targets_router.py  tournament.py  utils.py  websocket.py
backend/server/schema/: __init__.py  arrow.py  arrows.py  arrows_schema.py  base.py  sessions_schema.py  shots_schema.py  targets_schema.py
backend/server/src/: main.rs
backend/server/tests/: conftest.py
backend/server/tests/endpoints/: test_arrows_endpoints.py  test_sessions_endpoints.py  test_shots_endpoints.py  test_targets_endpoints.py
backend/server/tests/factories/: __init__.py  arrows_factory.py  sessions_factory.py  shots_factory.py  targets_factory.py
backend/server/tests/models/: test_arrows_model.py  test_sessions_model.py  test_shots_model.py  test_target_model.py
backend/shared/: Cargo.toml  __init__.py  database.py  db_init.py  logger.py  typed.py
backend/shared/src/: lib.rs
backend/shoot_recorder/: Cargo.toml  __init__.py  __main__.py  shoot_recorder.py
backend/shoot_recorder/src/: main.rs
backend/src/: app.py
backend/src/core/: __init__.py  authentication.py  base_manager.py  db_pool.py  face_data.py  live_stats_manager.py  logger.py  session_manager.py  settings.py  shot_manager.py  slot_manager.py  target_face_data.py
backend/src/factories/: __init__.py  archer_factory.py  arrow_factory.py  session_factory.py  shot_factory.py  slot_factory.py  target_factory.py
backend/src/frontend/: index.html
backend/src/frontend/assets/: index-B8PcxTjz.css  index-BhNKNjmk.js
backend/src/logs/: app.log.2025-09-23  app.log.2025-09-24  app.log.2025-09-25
backend/src/models/: __init__.py  archer_model.py  auth_model.py  live_stats_model.py  parent_model.py  session_model.py  shot_model.py  slot_model.py  sql_statement_builder.py  target_model.py
backend/src/routers/v0/: __init__.py  archer_router.py  auth_router.py  faces_router.py  live_stats_router.py  session_router.py  shot_router.py  shot_websocket.py  slot_router.py  stats_router.py  websocket.py
backend/src/schema/: __init__.py  archer_schema.py  auth_schema.py  base.py  enums.py  face_schema.py  live_stats_schema.py  session_schema.py  shot_schema.py  slot_schema.py  target_schema.py  websocket_schema.py
backend/src/server/: README.md  app.py  db_pool.py  settings.py
backend/src/server/frontend/: index.html
backend/src/server/models/: __init__.py  arrows_db.py  base_db.py  sessions_db.py  shots_db.py  targets_db.py
backend/src/shared/: db_pool.py  logger.py  settings.py
backend/src/target_reader/: __init__.py  archy.py  archy_bot.py  setup.py
backend/target_reader/: Cargo.toml  __init__.py  archy.py  main.py  pyproject.toml  setup.py
backend/tests/: conftest.py  utils.py
backend/tests/endpoints/: test_archer_endpoints.py  test_arrows_endpoints.py  test_auth_endpoints.py  test_faces_endpoints.py  test_security_edge_cases.py  test_session_endpoints.py  test_session_performance_endpoints.py  test_sessions_endpoints.py  test_shot_endpoints.py  test_shots_endpoints.py  test_slot_endpoints.py  test_stats_endpoint.py  test_targets_endpoints.py
backend/tests/factories/: __init__.py  arrows_factory.py  sessions_factory.py  shots_factory.py  targets_factory.py
backend/tests/models/: test_arrows_model.py  test_faces_model.py  test_session_performance_model.py  test_sessions_model.py  test_shots_model.py  test_target_model.py
backend/tools/: generate_openapi.py  linting.sh
(+347 files in other folders)
