[workspace]
members = ["hub", "server", "shoot_recorder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Juan Pablo Molina Matute <jpmolinamatute@gmail.com>"]
license = "MIT"

[workspace.dependencies]
postgres = "*"
ctrlc = "*"
chrono = "*"
uuid = { version = "*", features = ["v4"] }
