# https://docs.astral.sh/uv/reference/settings/

[project]
name = "arch-stats_backend"
version = "0.1.0"
description = "Analyzing Archery Performance Through Data"
authors = [
    { name = "Juan Pablo Molina Matute", email = "jpmolinamatute@gmail.com" },
]
requires-python = "==3.14.*"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi==0.128.0",
    "google-auth>=2.47.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "uvicorn[standard]==0.40.0",
    "uvloop==0.22.1",
    "starlette>=0.49.3",
]
[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.2",
    "faker>=40.1.2",
    "pytest-asyncio==1.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.uv]
python-preference = "only-managed"
required-version = ">=0.7.17"

[tool.ruff]
required-version = ">=0.14.8"
lint.extend-select = ["PTH", "FAST", "I", "PL", "UP"]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.typing-extensions = true
src = ["./app.py", "./src/", "./tests/"]
exclude = [
    "**/__pycache__/",
    ".pytest_cache/",
    ".venv/"
]
include = ["src/**/*.py", "tests/**/*.py"]
line-length = 100
format.quote-style = "double"
format.indent-style = "space"
format.line-ending = "lf"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-vra  --color=yes"
testpaths = "./tests"
pythonpath = "./src"
filterwarnings = [
    # See: https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:fastapi\\._compat\\.v1",
]

[tool.ty.environment]
python-platform = "linux"

[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 100
