[project]
name = "server"
version = "0.1.0"
description = "arch-stats: Web Server Module"
authors = [
    { name = "Juan Pablo Molina Matute", email = "jpmolinamatute@gmail.com" },
]
requires-python = ">=3.12.7"
dependencies = ["fastapi>=0.115.12", "asyncpg>=0.30.0", "httpx>=0.28.1"]

[dependency-groups]
dev = ["faker>=37.3.0", "pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
