[package]
name = "shoot_recorder"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
postgres = { workspace = true }
ctrlc = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }
