cargo-features = ["edition2024"]
[package]
name = "target_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
signal-hook = "0.3"
dotenv = "0.15"
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
